Make jquery post work with csrf token setup

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -101,6 +101,7 @@
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
 <script src="{% static 'twitter-bootstrap/3.0.3/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/btoa.js' %}"></script>
+<script src="{% static 'js/csrf.js' %}"></script>
 <script src="{% static 'js/comment_updown.js' %}"></script>
 <script type="text/javascript">$('a').tooltip();</script>
 <!-- XXX: use popup_message in commentBoard.js -->
