Fix comment modification in extension: Include csrf.js to comments/base.html

--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -17,6 +17,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 -->
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
+<script src="{% static 'js/csrf.js' %}"></script>
 <link href="{% static 'font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet">
 <link href="{% static 'twitter-bootstrap/3.0.3/css/bootstrap.min.css' %}" rel="stylesheet">
 
